// Перечисление для сторон света
enum Direction { North, South, East, West };
