// Абстрактный класс MapSite, определяющий интерфейс для всех элементов лабиринта (стена, комната, дверь).
class MapSite {
public:
    // Чисто виртуальная функция, которую должны реализовать все подклассы.
    virtual void Enter() = 0;
};
