// Класс Maze представляет лабиринт, содержащий комнаты.
class Maze {
public:
    Maze() {}  // Конструктор лабиринта

    // Добавляет комнату в лабиринт.
    void AddRoom(Room* room) {
        // Логика для добавления комнаты в лабиринт
    }

    // Возвращает комнату по её номеру.
    Room* RoomNo(int roomNo) const {
        // Логика для поиска комнаты
        return nullptr;
    }

private:
    // Здесь можно было бы хранить массив или коллекцию комнат.
};
