@startuml
title Шаблон "Лабиринт" - UML диаграмма

enum Direction {
    North
    South
    East
    West
}

abstract class MapSite {
    +Enter() : void
}

class Room {
    +Room(int roomNo)
    +GetSite(Direction) : MapSite
    +SetSide(Direction, MapSite)
    +Enter() : void
    -MapSite* _sides[4]
    -int _roomNumber
}

class Wall {
    +Wall()
    +Enter() : void
}

class Door {
    +Door(Room*, Room*)
    +Enter() : void
    +OtherSideFrom(Room) : Room*
    -Room* _room1
    -Room* _room2
    -bool _isOpen
}

class Maze {
    +Maze()
    +AddRoom(Room*) : void
    +RoomNo(int) : Room*
}

class MazeGame {
    +CreateMaze() : Maze*
}

MapSite <|-- Room
MapSite <|-- Wall
MapSite <|-- Door

MazeGame --> Maze
Maze --> Room
Room --> MapSite
Door --> Room

@enduml
